Fix z-index

--- a/src/components/switch/switch.css
+++ b/src/components/switch/switch.css
@@ -6,6 +6,7 @@
   right: -20px;
   transform: scale(0.5);
   filter: grayscale(100%);
+  z-index: 10;
 }
 
 .switch {
